fix(#476): modal flickering fixed (#481)

--- a/src/components/with-background/with-background.scss
+++ b/src/components/with-background/with-background.scss
@@ -15,6 +15,10 @@
   &--close {
     opacity: 0;
   }
+
+  &--no-animated-open {
+    animation: none;
+  }
 }
 
 @keyframes fade {
